--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
